2002-07-18  Roland Krause  <roland@ca.wai.com>
    * Another fine patch from our friend Kuba Ober. 
      This one is even completely self-explanatory. 
2002-07-18  Harald Fernengel <harry@kdevelop.org>
    * Applied debian patches by Norman Jordan <njordan@shaw.ca>
    * Applied the OpenBSD compile fix by Craig Barraclough <craigba@creative.com.au>
2002-07-17  Kuba Ober <kuba@mareimbrium.org>
    * using tab for comments made possible
      - tab key inserts tabs at end of the line
      - tab key inserts tabs if used before a comment ("//", "/*")
      - tab key inserts tabs if used inside a comment
2002-06-25  Walter Tasin <tasin@kdevelop.org>
    * bugfix #44111: CFLAGS and CPPFLAGS don't apply in build process
    blessed by Roland
2002-06-22  Walter Tasin <tasin@kdevelop.org>
    * correcting a problem in using default font, if there is no
      configuration
    * giving the possibility to switch to color printing inside
      kdeveloprc
    both reviewed by Falk
2002-06-12  F@lk Brettschneider <falk@kdevelop.org>
    * fixed newly introduced bugs in CMakeOutputView:
      - line wrap is on again (wrapping is cooler than loooong lines!)
      - Qt-3.0.3, only: jump to error jumped to wrong line after the patch of Sebastian was applied
      - scroll to bottom after insertAt as lang as you didn't click on a certain line to stay there
    * fixed latest patch of Kuba Ober to let it compile also on KDE-2.2
2002-06-10  F@lk Brettschneider <falk@kdevelop.org>
    * applied patch of Kuba Ober fixing the single-compile functionality for Custom projects
2002-06-07  Roland Krause  <roland@ca.wai.com>
    * Reapplied Kuba Ober's patch for indentation in first line of file. 
      This is what happends when you apply patches instead using CVS!!!
    * Applied Sebastian's patch for coutputwidget.cpp, click on error 
      message now jumps to the correct line.
2002-06-07  F@lk Brettschneider <falk@kdevelop.org>